# ternary-logistic

./: AGENT.md  Cargo.toml  README.md  STUDENT_GUIDE.md
memory/: JOURNAL.md
src/: lib.rs
