[package]
description = "ternary-logistic - SuperInstance ecosystem crate"
repository = "https://github.com/SuperInstance/ternary-logistic"
name = "ternary-logistic"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
ternary-types = { git = "https://github.com/SuperInstance/ternary-types.git", features = ["std"] }
